--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -38,15 +38,20 @@ a {
 	width: 100%;
 	margin: 0 auto;
 	@include krem('padding', 20px);
-	@include centered();
-	position: fixed;
+	@media(min-width: 768px) {
+		@include centered();
+		position: fixed;
+	}
 }
 
 // Forms
 
 input, textarea, select, label {
 	font-family: $primary-font;
-	font-size: 1.6rem;
+	font-size: 1.2rem;
+	@media(min-width: 768px) {
+		font-size: 1.6rem;
+	}
 	color: $color-1;
 }
 
@@ -73,19 +78,25 @@ textarea {
 	height: 150px;
 	transition: 0.55s all;
 
-	&:focus {
-		height: 170px;
+	@media(min-width: 768px) {
+		&:focus {
+			height: 170px;
+		}
 	}
 
 	@include krem('margin-top', 20px);
 }
 
 label {
-	transition: top .2s, left .2s, font-size .2s;
-	position: absolute;
-	top: 36px;
-	left: 16px;
-	font-size: 1.6rem;
+
+	font-size: 1rem;
+	@media(min-width: 768px) {
+		transition: top .2s, left .2s, font-size .2s;
+		position: absolute;
+		top: 36px;
+		left: 16px;
+		font-size: 1.6rem;
+	}
 	cursor: text;
 	opacity: 0.7;
 }
@@ -134,14 +145,6 @@ button {
 h2 {
 	margin-bottom: 10px;
 	margin-top: 0;
-}
-
-h1.c {
-	opacity: 0.3;
-	margin-bottom: 0 !important;
-	padding-bottom: 0 !important;
-	font-size: 30px !important;
-	line-height: inherit !important;
 }
 
 .characters {
